   overview page.
 - Add optional judge comment field to judging verification.
 - Redirect to originating page after verification of submission.
 - Move checktestdata grammar specification to separate file
   and publish as public domain.
 - Add possibility to export a problem to a zip-bundle.
 - Add specification of DOMjudge problem format zip-bundle.

Version 3.3.0 Release Candidate 1 - 30 April 2012
-------------------------------------------------
 - [INCOMPATIBLE CHANGE,security] enable cURL SSL host/peer verification
   in the command line submit client. This requires any self-signed
   certificates now to be available to libcURL on a team machine.
 - Add compile script and test source for language 'bash'.
 - Prioritize to team's last judging (port from ETH tree).
 - Fix testing for empty output with strlen (port from ETH tree).
 - Update M4 macro's from upstream, fixing some problems.
 - Fix configure script to allow subdir customization in FHS mode.
 - Upgrade included dash shell to version 0.5.7-2.
 - Use Debian 6.0 Squeeze for building Java chroot.
 - Fix warning of runguard trying to reset resource limits to infinity.
 - Fix minor bug in diff output coloring due to line number overflow.
 - Rename SQL upgrade snippets and add README file for these.
 - Raise minimum required PHP version to 5.2.
 - Judges now use individual accounts to access the jury webinterface,
   which will be used to track claiming, verification, etc.
 - Add auditlog for all actions changing contest state.
 - Protect against clickjacking by forbidding framing using the
   X-Frame-Options HTTP header supported in modern browsers.
 - Reimplement balloon tracking and notification backend.
 - Display current contest prominently on contests page and provide
   button to have the next contest milestone happen now.
 - Add script to automatically submit solutions and clarifications.
 - Remove duplicate queries in scoreboard generation.